Features Default Values Updated

--- a/notebooks/02_model.ipynb
+++ b/notebooks/02_model.ipynb
@@ -540,7 +540,7 @@
    ],
    "source": [
     "# Add categorical_features\n",
-    "df = add_date_categorical_features(df)\n",
+    "df, date_feature_names = add_date_categorical_features(df)\n",
     "\n",
     "display(df.head())"
    ]
@@ -550,9 +550,21 @@
    "execution_count": 7,
    "id": "2a4522e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['is_holiday_or_adjacent', 'dayofweek', 'month', 'quarter']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "cat_features = [\"is_holiday_or_adjacent\", \"dayofweek\", \"month\", \"quarter\"]"
+    "cat_features = [\"is_holiday_or_adjacent\"] + date_feature_names\n",
+    "cat_features"
    ]
   },
   {
@@ -611,14 +623,17 @@
        "      <th>dayofweek</th>\n",
        "      <th>month</th>\n",
        "      <th>quarter</th>\n",
-       "      <th>sales_quantity_roll7_mean</th>\n",
-       "      <th>sales_quantity_roll14_mean</th>\n",
-       "      <th>sales_quantity_roll28_mean</th>\n",
-       "      <th>sales_quantity_roll56_mean</th>\n",
+       "      <th>...</th>\n",
+       "      <th>sales_quantity_roll112_mean</th>\n",
+       "      <th>sales_quantity_roll500_mean</th>\n",
+       "      <th>sales_quantity_roll1000_mean</th>\n",
        "      <th>sales_price_roll7_mean</th>\n",
        "      <th>sales_price_roll14_mean</th>\n",
        "      <th>sales_price_roll28_mean</th>\n",
        "      <th>sales_price_roll56_mean</th>\n",
+       "      <th>sales_price_roll112_mean</th>\n",
+       "      <th>sales_price_roll500_mean</th>\n",
+       "      <th>sales_price_roll1000_mean</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -634,6 +649,9 @@
        "      <td>4</td>\n",
        "      <td>11</td>\n",
        "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -655,6 +673,9 @@
        "      <td>4</td>\n",
        "      <td>11</td>\n",
        "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -676,6 +697,9 @@
        "      <td>4</td>\n",
        "      <td>11</td>\n",
        "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -697,6 +721,9 @@
        "      <td>4</td>\n",
        "      <td>11</td>\n",
        "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -718,6 +745,9 @@
        "      <td>4</td>\n",
        "      <td>11</td>\n",
        "      <td>4</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -729,6 +759,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -739,40 +770,49 @@
        "244  544804 2016-11-18         17.0       32.760             2.0  False   \n",
        "454  685105 2016-11-18         17.0       27.066             0.0   True   \n",
        "\n",
-       "     is_holiday_or_adjacent dayofweek month quarter  \\\n",
-       "631                   False         4    11       4   \n",
-       "648                   False         4    11       4   \n",
-       "411                   False         4    11       4   \n",
-       "244                   False         4    11       4   \n",
-       "454                   False         4    11       4   \n",
+       "     is_holiday_or_adjacent dayofweek month quarter  ...  \\\n",
+       "631                   False         4    11       4  ...   \n",
+       "648                   False         4    11       4  ...   \n",
+       "411                   False         4    11       4  ...   \n",
+       "244                   False         4    11       4  ...   \n",
+       "454                   False         4    11       4  ...   \n",
        "\n",
-       "     sales_quantity_roll7_mean  sales_quantity_roll14_mean  \\\n",
-       "631                        NaN                         NaN   \n",
-       "648                        NaN                         NaN   \n",
-       "411                        NaN                         NaN   \n",
-       "244                        NaN                         NaN   \n",
-       "454                        NaN                         NaN   \n",
+       "     sales_quantity_roll112_mean  sales_quantity_roll500_mean  \\\n",
+       "631                          NaN                          NaN   \n",
+       "648                          NaN                          NaN   \n",
+       "411                          NaN                          NaN   \n",
+       "244                          NaN                          NaN   \n",
+       "454                          NaN                          NaN   \n",
        "\n",
-       "     sales_quantity_roll28_mean  sales_quantity_roll56_mean  \\\n",
-       "631                         NaN                         NaN   \n",
-       "648                         NaN                         NaN   \n",
-       "411                         NaN                         NaN   \n",
-       "244                         NaN                         NaN   \n",
-       "454                         NaN                         NaN   \n",
+       "     sales_quantity_roll1000_mean  sales_price_roll7_mean  \\\n",
+       "631                           NaN                     NaN   \n",
+       "648                           NaN                     NaN   \n",
+       "411                           NaN                     NaN   \n",
+       "244                           NaN                     NaN   \n",
+       "454                           NaN                     NaN   \n",
        "\n",
-       "     sales_price_roll7_mean  sales_price_roll14_mean  sales_price_roll28_mean  \\\n",
-       "631                     NaN                      NaN                      NaN   \n",
-       "648                     NaN                      NaN                      NaN   \n",
-       "411                     NaN                      NaN                      NaN   \n",
-       "244                     NaN                      NaN                      NaN   \n",
-       "454                     NaN                      NaN                      NaN   \n",
+       "     sales_price_roll14_mean  sales_price_roll28_mean  \\\n",
+       "631                      NaN                      NaN   \n",
+       "648                      NaN                      NaN   \n",
+       "411                      NaN                      NaN   \n",
+       "244                      NaN                      NaN   \n",
+       "454                      NaN                      NaN   \n",
        "\n",
-       "     sales_price_roll56_mean  \n",
-       "631                      NaN  \n",
-       "648                      NaN  \n",
-       "411                      NaN  \n",
-       "244                      NaN  \n",
-       "454                      NaN  "
+       "     sales_price_roll56_mean  sales_price_roll112_mean  \\\n",
+       "631                      NaN                       NaN   \n",
+       "648                      NaN                       NaN   \n",
+       "411                      NaN                       NaN   \n",
+       "244                      NaN                       NaN   \n",
+       "454                      NaN                       NaN   \n",
+       "\n",
+       "     sales_price_roll500_mean  sales_price_roll1000_mean  \n",
+       "631                       NaN                        NaN  \n",
+       "648                       NaN                        NaN  \n",
+       "411                       NaN                        NaN  \n",
+       "244                       NaN                        NaN  \n",
+       "454                       NaN                        NaN  \n",
+       "\n",
+       "[5 rows x 24 columns]"
       ]
      },
      "metadata": {},
@@ -781,7 +821,7 @@
    ],
    "source": [
     "# Additional Numeric Features\n",
-    "df, rolling_feature_names = add_rolling_mean_features(df, days=[7, 14, 28, 56, 112, 500, 1000], columns=['sales_quantity', 'sales_price'])\n",
+    "df, rolling_feature_names = add_rolling_mean_features(df, columns=['sales_quantity', 'sales_price'])\n",
     "\n",
     "display(df.head())"
    ]
@@ -801,10 +841,16 @@
        " 'sales_quantity_roll14_mean',\n",
        " 'sales_quantity_roll28_mean',\n",
        " 'sales_quantity_roll56_mean',\n",
+       " 'sales_quantity_roll112_mean',\n",
+       " 'sales_quantity_roll500_mean',\n",
+       " 'sales_quantity_roll1000_mean',\n",
        " 'sales_price_roll7_mean',\n",
        " 'sales_price_roll14_mean',\n",
        " 'sales_price_roll28_mean',\n",
-       " 'sales_price_roll56_mean']"
+       " 'sales_price_roll56_mean',\n",
+       " 'sales_price_roll112_mean',\n",
+       " 'sales_price_roll500_mean',\n",
+       " 'sales_price_roll1000_mean']"
       ]
      },
      "execution_count": 10,
@@ -913,8 +959,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 79.4749925\ttest: 4.5281657\tbest: 4.5281657 (0)\ttotal: 159ms\tremaining: 47.4s\n",
-      "50:\tlearn: 79.4746978\ttest: 4.5352542\tbest: 4.5281657 (0)\ttotal: 2.65s\tremaining: 13s\n",
+      "0:\tlearn: 79.4749925\ttest: 4.5281657\tbest: 4.5281657 (0)\ttotal: 159ms\tremaining: 47.7s\n",
+      "50:\tlearn: 79.4746978\ttest: 4.5352542\tbest: 4.5281657 (0)\ttotal: 2.6s\tremaining: 12.7s\n",
       "Stopped by overfitting detector  (50 iterations wait)\n",
       "\n",
       "bestTest = 4.528165714\n",
@@ -959,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "61c31f89",
    "metadata": {},
    "outputs": [
@@ -967,24 +1013,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 75.8853735\ttest: 4.4791549\tbest: 4.4791549 (0)\ttotal: 204ms\tremaining: 1m 41s\n",
-      "50:\tlearn: 21.5994162\ttest: 3.1340279\tbest: 3.1329717 (43)\ttotal: 6.74s\tremaining: 59.3s\n",
-      "100:\tlearn: 19.4244993\ttest: 2.4654407\tbest: 2.4654407 (100)\ttotal: 12.3s\tremaining: 48.4s\n",
-      "150:\tlearn: 18.7887767\ttest: 2.2184422\tbest: 2.2169313 (148)\ttotal: 18.4s\tremaining: 42.5s\n",
-      "200:\tlearn: 18.2151075\ttest: 2.1790442\tbest: 2.1790415 (198)\ttotal: 24.3s\tremaining: 36.1s\n",
-      "250:\tlearn: 17.7151154\ttest: 2.1693073\tbest: 2.1693022 (248)\ttotal: 29.9s\tremaining: 29.7s\n",
-      "300:\tlearn: 17.0407758\ttest: 2.1657157\tbest: 2.1657073 (291)\ttotal: 35.1s\tremaining: 23.2s\n",
-      "350:\tlearn: 16.6290154\ttest: 2.1657630\tbest: 2.1656925 (335)\ttotal: 40.5s\tremaining: 17.2s\n",
-      "400:\tlearn: 16.2518510\ttest: 2.1646057\tbest: 2.1645847 (397)\ttotal: 46s\tremaining: 11.4s\n",
-      "450:\tlearn: 15.9863672\ttest: 2.1645762\tbest: 2.1645591 (440)\ttotal: 50.4s\tremaining: 5.48s\n",
-      "499:\tlearn: 15.7295994\ttest: 2.1640624\tbest: 2.1640562 (498)\ttotal: 54.6s\tremaining: 0us\n",
-      "\n",
-      "bestTest = 2.164056182\n",
-      "bestIteration = 498\n",
-      "\n",
-      "Shrink model to first 499 iterations.\n",
-      "Full CatBoost MAE with extra features: 0.587\n",
-      "\n"
+      "0:\tlearn: 75.9261631\ttest: 4.4856803\tbest: 4.4856803 (0)\ttotal: 175ms\tremaining: 1m 27s\n",
+      "50:\tlearn: 21.5858050\ttest: 3.0366909\tbest: 3.0365456 (47)\ttotal: 6.86s\tremaining: 1m\n",
+      "100:\tlearn: 19.3447258\ttest: 2.5760191\tbest: 2.5760191 (100)\ttotal: 12.6s\tremaining: 49.9s\n",
+      "150:\tlearn: 18.7051170\ttest: 2.2806020\tbest: 2.2805896 (148)\ttotal: 18.8s\tremaining: 43.5s\n",
+      "200:\tlearn: 18.1040685\ttest: 2.2456773\tbest: 2.2421937 (199)\ttotal: 24.1s\tremaining: 35.9s\n",
+      "250:\tlearn: 17.6647315\ttest: 2.2215985\tbest: 2.2215703 (242)\ttotal: 29.9s\tremaining: 29.7s\n",
+      "300:\tlearn: 17.1332910\ttest: 2.2145436\tbest: 2.2145409 (295)\ttotal: 35.1s\tremaining: 23.2s\n",
+      "350:\tlearn: 16.4988965\ttest: 2.2115105\tbest: 2.2114913 (323)\ttotal: 40.5s\tremaining: 17.2s\n"
      ]
     }
    ],
