README.md status update

--- a/notebooks/02_model.ipynb
+++ b/notebooks/02_model.ipynb
@@ -2063,14 +2063,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
-   "id": "040df987",
+   "execution_count": null,
+   "id": "cb9417c6",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.model_selection import KFold\n",
-    "\n",
+    "from sklearn.model_selection import KFold"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "040df987",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "param_grid = {\n",
     "    'depth': [4, 6, 8],\n",
     "    'learning_rate': [0.01, 0.05, 0.1],\n",
