Remove catboost_info from repository and add to .gitignore

--- a/notebooks/02_model.ipynb
+++ b/notebooks/02_model.ipynb
@@ -2098,6 +2098,20 @@
      "text": [
       "Fitting 3 folds for each of 18 candidates, totalling 54 fits\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] END ........depth=4, iterations=200, learning_rate=0.01; total time= 3.5min\n",
+      "[CV] END ........depth=4, iterations=200, learning_rate=0.05; total time= 3.5min\n",
+      "[CV] END ........depth=4, iterations=200, learning_rate=0.05; total time= 3.5min\n",
+      "[CV] END ........depth=4, iterations=200, learning_rate=0.01; total time= 3.5min\n",
+      "[CV] END .........depth=4, iterations=200, learning_rate=0.1; total time= 3.5min\n",
+      "[CV] END .........depth=4, iterations=200, learning_rate=0.1; total time= 3.5min\n",
+      "[CV] END ........depth=4, iterations=200, learning_rate=0.01; total time= 3.5min\n",
+      "[CV] END ........depth=4, iterations=200, learning_rate=0.05; total time= 3.8min\n"
+     ]
     }
    ],
    "source": [
