Results Update : Future File Index was Sorted

--- a/notebooks/02_model.ipynb
+++ b/notebooks/02_model.ipynb
@@ -1887,7 +1887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": null,
    "id": "28a0e4fa",
    "metadata": {},
    "outputs": [
@@ -1925,39 +1925,39 @@
        "      <td>2020-11-01</td>\n",
        "      <td>7</td>\n",
        "      <td>1045</td>\n",
-       "      <td>284.700</td>\n",
+       "      <td>284.70</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5544</th>\n",
-       "      <td>2020-11-01</td>\n",
-       "      <td>17</td>\n",
-       "      <td>605572</td>\n",
-       "      <td>62.322</td>\n",
+       "      <th>1</th>\n",
+       "      <td>2020-11-02</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1045</td>\n",
+       "      <td>284.70</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1148</th>\n",
-       "      <td>2020-11-01</td>\n",
+       "      <th>2</th>\n",
+       "      <td>2020-11-03</td>\n",
        "      <td>7</td>\n",
-       "      <td>49020</td>\n",
-       "      <td>388.700</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1045</td>\n",
+       "      <td>284.70</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>11284</th>\n",
-       "      <td>2020-11-01</td>\n",
+       "      <th>3</th>\n",
+       "      <td>2020-11-04</td>\n",
        "      <td>7</td>\n",
-       "      <td>840709</td>\n",
-       "      <td>61.022</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1045</td>\n",
+       "      <td>284.70</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>5558</th>\n",
-       "      <td>2020-11-01</td>\n",
-       "      <td>17</td>\n",
-       "      <td>605573</td>\n",
-       "      <td>62.322</td>\n",
+       "      <th>4</th>\n",
+       "      <td>2020-11-05</td>\n",
+       "      <td>7</td>\n",
+       "      <td>1045</td>\n",
+       "      <td>284.70</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1969,43 +1969,43 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7027</th>\n",
-       "      <td>2020-11-14</td>\n",
-       "      <td>7</td>\n",
-       "      <td>701851</td>\n",
-       "      <td>304.200</td>\n",
+       "      <th>11363</th>\n",
+       "      <td>2020-11-10</td>\n",
+       "      <td>17</td>\n",
+       "      <td>842136</td>\n",
+       "      <td>631.80</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7013</th>\n",
-       "      <td>2020-11-14</td>\n",
-       "      <td>23</td>\n",
-       "      <td>701214</td>\n",
-       "      <td>48.607</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6999</th>\n",
-       "      <td>2020-11-14</td>\n",
+       "      <th>11364</th>\n",
+       "      <td>2020-11-11</td>\n",
        "      <td>17</td>\n",
-       "      <td>700395</td>\n",
-       "      <td>55.250</td>\n",
+       "      <td>842136</td>\n",
+       "      <td>824.20</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>7125</th>\n",
-       "      <td>2020-11-14</td>\n",
+       "      <th>11365</th>\n",
+       "      <td>2020-11-12</td>\n",
        "      <td>17</td>\n",
-       "      <td>702121</td>\n",
-       "      <td>62.322</td>\n",
-       "      <td>1</td>\n",
+       "      <td>842136</td>\n",
+       "      <td>824.20</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11366</th>\n",
+       "      <td>2020-11-13</td>\n",
+       "      <td>17</td>\n",
+       "      <td>842136</td>\n",
+       "      <td>824.20</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>11367</th>\n",
        "      <td>2020-11-14</td>\n",
        "      <td>17</td>\n",
        "      <td>842136</td>\n",
-       "      <td>63.570</td>\n",
+       "      <td>63.57</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -2015,22 +2015,22 @@
       ],
       "text/plain": [
        "            date  category_id  sku_id  sales_price  sales_quantity\n",
-       "0     2020-11-01            7    1045      284.700               1\n",
-       "5544  2020-11-01           17  605572       62.322               1\n",
-       "1148  2020-11-01            7   49020      388.700               0\n",
-       "11284 2020-11-01            7  840709       61.022               0\n",
-       "5558  2020-11-01           17  605573       62.322               1\n",
+       "0     2020-11-01            7    1045       284.70               1\n",
+       "1     2020-11-02            7    1045       284.70               1\n",
+       "2     2020-11-03            7    1045       284.70               1\n",
+       "3     2020-11-04            7    1045       284.70               1\n",
+       "4     2020-11-05            7    1045       284.70               1\n",
        "...          ...          ...     ...          ...             ...\n",
-       "7027  2020-11-14            7  701851      304.200               0\n",
-       "7013  2020-11-14           23  701214       48.607               3\n",
-       "6999  2020-11-14           17  700395       55.250               0\n",
-       "7125  2020-11-14           17  702121       62.322               1\n",
-       "11367 2020-11-14           17  842136       63.570               0\n",
+       "11363 2020-11-10           17  842136       631.80               0\n",
+       "11364 2020-11-11           17  842136       824.20               0\n",
+       "11365 2020-11-12           17  842136       824.20               0\n",
+       "11366 2020-11-13           17  842136       824.20               0\n",
+       "11367 2020-11-14           17  842136        63.57               0\n",
        "\n",
        "[11368 rows x 5 columns]"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2038,18 +2038,18 @@
    "source": [
     "# Add prediction\n",
     "df_future = load_and_prepare_data(\"../data/raw/df_future.csv\", reset_index=False)\n",
-    "df_future[\"sales_quantity\"] = y_pred_test_int\n",
-    "df_future"
+    "df_future[\"sales_quantity\"] = y_pred_test_int"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 91,
    "id": "0830e82c",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Save prediction\n",
+    "df_future = df_future.sort_index()\n",
     "df_future.to_csv(\"../results/df_future.csv\")"
    ]
   },
@@ -2091,29 +2091,7 @@
    "execution_count": null,
    "id": "e01cb1f7",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fitting 3 folds for each of 18 candidates, totalling 54 fits\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[CV] END ........depth=4, iterations=200, learning_rate=0.01; total time= 3.5min\n",
-      "[CV] END ........depth=4, iterations=200, learning_rate=0.05; total time= 3.5min\n",
-      "[CV] END ........depth=4, iterations=200, learning_rate=0.05; total time= 3.5min\n",
-      "[CV] END ........depth=4, iterations=200, learning_rate=0.01; total time= 3.5min\n",
-      "[CV] END .........depth=4, iterations=200, learning_rate=0.1; total time= 3.5min\n",
-      "[CV] END .........depth=4, iterations=200, learning_rate=0.1; total time= 3.5min\n",
-      "[CV] END ........depth=4, iterations=200, learning_rate=0.01; total time= 3.5min\n",
-      "[CV] END ........depth=4, iterations=200, learning_rate=0.05; total time= 3.8min\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "cb_model = CatBoostRegressor(\n",
     "    loss_function='MAE',\n",
