Cross-Validation fix for TimeSeries

--- a/notebooks/02_model.ipynb
+++ b/notebooks/02_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 1,
    "id": "1baae911",
    "metadata": {},
    "outputs": [],
@@ -955,8 +955,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 79.4749925\ttest: 4.5281657\tbest: 4.5281657 (0)\ttotal: 160ms\tremaining: 48s\n",
-      "50:\tlearn: 79.4746978\ttest: 4.5352542\tbest: 4.5281657 (0)\ttotal: 2.67s\tremaining: 13s\n",
+      "0:\tlearn: 79.4749925\ttest: 4.5281657\tbest: 4.5281657 (0)\ttotal: 176ms\tremaining: 52.6s\n",
+      "50:\tlearn: 79.4746978\ttest: 4.5352542\tbest: 4.5281657 (0)\ttotal: 2.63s\tremaining: 12.9s\n",
       "Stopped by overfitting detector  (50 iterations wait)\n",
       "\n",
       "bestTest = 4.528165714\n",
@@ -1008,9 +1008,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 75.9080630\ttest: 4.4716586\tbest: 4.4716586 (0)\ttotal: 168ms\tremaining: 1m 23s\n",
-      "50:\tlearn: 23.0622288\ttest: 2.5482833\tbest: 2.5482833 (50)\ttotal: 6.91s\tremaining: 1m\n",
-      "100:\tlearn: 21.1008682\ttest: 2.6483806\tbest: 2.5287368 (64)\ttotal: 12.2s\tremaining: 48s\n",
+      "0:\tlearn: 75.9080630\ttest: 4.4716586\tbest: 4.4716586 (0)\ttotal: 161ms\tremaining: 1m 20s\n",
+      "50:\tlearn: 23.0622288\ttest: 2.5482833\tbest: 2.5482833 (50)\ttotal: 6.9s\tremaining: 1m\n",
+      "100:\tlearn: 21.1008682\ttest: 2.6483806\tbest: 2.5287368 (64)\ttotal: 12.2s\tremaining: 48.2s\n",
       "Stopped by overfitting detector  (50 iterations wait)\n",
       "\n",
       "bestTest = 2.52873678\n",
@@ -1055,16 +1055,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "84c8ea32",
-   "metadata": {},
-   "source": [
-    "We can drop indexes in future (test) as date-sku_id keep this information."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 15,
    "id": "0f0f3121",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 16,
    "id": "f691b150",
    "metadata": {},
    "outputs": [
@@ -1291,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 17,
    "id": "6682d35f",
    "metadata": {},
    "outputs": [
@@ -1301,7 +1293,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 78,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 18,
    "id": "9a613652",
    "metadata": {},
    "outputs": [
@@ -1323,7 +1315,7 @@
        "Timestamp('2020-11-01 00:00:00')"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1336,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 19,
    "id": "d85dd223",
    "metadata": {},
    "outputs": [
@@ -1749,7 +1741,7 @@
        "[1539120 rows x 22 columns]"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1763,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 20,
    "id": "da734dfa",
    "metadata": {},
    "outputs": [],
@@ -1795,7 +1787,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 21,
    "id": "d13384b3",
    "metadata": {},
    "outputs": [
@@ -1803,10 +1795,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0:\tlearn: 2.7588402\ttest: 3.8017825\tbest: 3.8017825 (0)\ttotal: 227ms\tremaining: 3m 47s\n",
-      "50:\tlearn: 1.6415532\ttest: 1.8309491\tbest: 1.8309491 (50)\ttotal: 8.32s\tremaining: 2m 34s\n",
+      "0:\tlearn: 2.7588402\ttest: 3.8017825\tbest: 3.8017825 (0)\ttotal: 183ms\tremaining: 3m 2s\n",
+      "50:\tlearn: 1.6415532\ttest: 1.8309491\tbest: 1.8309491 (50)\ttotal: 8.07s\tremaining: 2m 30s\n",
       "100:\tlearn: 1.6034732\ttest: 1.8138446\tbest: 1.8065371 (77)\ttotal: 15.6s\tremaining: 2m 18s\n",
-      "150:\tlearn: 1.5822732\ttest: 1.8309638\tbest: 1.8065371 (77)\ttotal: 22.5s\tremaining: 2m 6s\n",
+      "150:\tlearn: 1.5822732\ttest: 1.8309638\tbest: 1.8065371 (77)\ttotal: 22.8s\tremaining: 2m 8s\n",
       "Stopped by overfitting detector  (100 iterations wait)\n",
       "\n",
       "bestTest = 1.806537056\n",
@@ -1818,10 +1810,10 @@
     {
      "data": {
       "text/plain": [
-       "<catboost.core.CatBoostRegressor at 0x125dca300>"
+       "<catboost.core.CatBoostRegressor at 0x126863aa0>"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1842,7 +1834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 22,
    "id": "143d55cc",
    "metadata": {},
    "outputs": [
@@ -1863,7 +1855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 23,
    "id": "43a4131a",
    "metadata": {},
    "outputs": [
@@ -1873,7 +1865,7 @@
        "array([1, 1, 0, ..., 0, 1, 0], shape=(11368,))"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1887,154 +1879,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "28a0e4fa",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>date</th>\n",
-       "      <th>category_id</th>\n",
-       "      <th>sku_id</th>\n",
-       "      <th>sales_price</th>\n",
-       "      <th>sales_quantity</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2020-11-01</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1045</td>\n",
-       "      <td>284.70</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2020-11-02</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1045</td>\n",
-       "      <td>284.70</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2020-11-03</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1045</td>\n",
-       "      <td>284.70</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2020-11-04</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1045</td>\n",
-       "      <td>284.70</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2020-11-05</td>\n",
-       "      <td>7</td>\n",
-       "      <td>1045</td>\n",
-       "      <td>284.70</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11363</th>\n",
-       "      <td>2020-11-10</td>\n",
-       "      <td>17</td>\n",
-       "      <td>842136</td>\n",
-       "      <td>631.80</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11364</th>\n",
-       "      <td>2020-11-11</td>\n",
-       "      <td>17</td>\n",
-       "      <td>842136</td>\n",
-       "      <td>824.20</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11365</th>\n",
-       "      <td>2020-11-12</td>\n",
-       "      <td>17</td>\n",
-       "      <td>842136</td>\n",
-       "      <td>824.20</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11366</th>\n",
-       "      <td>2020-11-13</td>\n",
-       "      <td>17</td>\n",
-       "      <td>842136</td>\n",
-       "      <td>824.20</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11367</th>\n",
-       "      <td>2020-11-14</td>\n",
-       "      <td>17</td>\n",
-       "      <td>842136</td>\n",
-       "      <td>63.57</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>11368 rows × 5 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            date  category_id  sku_id  sales_price  sales_quantity\n",
-       "0     2020-11-01            7    1045       284.70               1\n",
-       "1     2020-11-02            7    1045       284.70               1\n",
-       "2     2020-11-03            7    1045       284.70               1\n",
-       "3     2020-11-04            7    1045       284.70               1\n",
-       "4     2020-11-05            7    1045       284.70               1\n",
-       "...          ...          ...     ...          ...             ...\n",
-       "11363 2020-11-10           17  842136       631.80               0\n",
-       "11364 2020-11-11           17  842136       824.20               0\n",
-       "11365 2020-11-12           17  842136       824.20               0\n",
-       "11366 2020-11-13           17  842136       824.20               0\n",
-       "11367 2020-11-14           17  842136        63.57               0\n",
-       "\n",
-       "[11368 rows x 5 columns]"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Add prediction\n",
     "df_future = load_and_prepare_data(\"../data/raw/df_future.csv\", reset_index=False)\n",
@@ -2043,7 +1891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 25,
    "id": "0830e82c",
    "metadata": {},
    "outputs": [],
@@ -2058,7 +1906,7 @@
    "id": "266bf5a1",
    "metadata": {},
    "source": [
-    "#### GridSearch:"
+    "# 5 GridSearch for CatBoost:"
    ]
   },
   {
@@ -2069,20 +1917,19 @@
    "outputs": [],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.model_selection import KFold"
+    "from sklearn.model_selection import TimeSeriesSplit"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "040df987",
    "metadata": {},
    "outputs": [],
    "source": [
     "param_grid = {\n",
     "    'depth': [4, 6, 8],\n",
-    "    'learning_rate': [0.01, 0.05, 0.1],\n",
-    "    'iterations': [200, 500],\n",
+    "    'learning_rate': [0.01, 0.05, 0.1]\n",
     "}"
    ]
   },
@@ -2091,12 +1938,21 @@
    "execution_count": null,
    "id": "e01cb1f7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 3 folds for each of 9 candidates, totalling 27 fits\n"
+     ]
+    }
+   ],
    "source": [
     "cb_model = CatBoostRegressor(\n",
     "    loss_function='MAE',\n",
     "    random_seed=42,\n",
-    "    verbose=0 \n",
+    "    verbose=0 ,\n",
+    "    iterations=500\n",
     ")\n",
     "\n",
     "fit_params = {\n",
@@ -2105,7 +1961,7 @@
     "    'eval_set': (X_val, y_val)\n",
     "}\n",
     "\n",
-    "cv = KFold(n_splits=3, shuffle=False)\n",
+    "cv = TimeSeriesSplit(n_splits=3)\n",
     "\n",
     "grid = GridSearchCV(\n",
     "    cb_model,\n",
